Fix alignment css bug

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -124,7 +124,7 @@ p {
   position: relative;
   color: white;
   text-align: center;
-
+  margin: 0 auto;
 }
 
 .message {
